--- a/hDirect-MAP_tutorial.ipynb
+++ b/hDirect-MAP_tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,9 +9,9 @@
     "\n",
     "**hDirect-MAP, an algorithm that projects T cells into a shared high-dimensional (HD) expression space of diverse T cell functional signatures in which cells group by T cell phenotypes, poised to ICB outcomes, rather than cancer-specific conditions.**\n",
     "\n",
-    "This ipython notebook is part of the submission of _\"Single-cell modeling of distinct T cell phenotypes poised to immunotherapy response defines a generalizable and accurate predictive biomarker.\"_\n",
+    "This ipython notebook is part of the submission of _\"Robust and Generalizable Predictive Biomarker of Response to Checkpoint Immunotherapy using High-Dimensional Cell Projection with hDirect-MAP.\"_\n",
     "\n",
-    "Here, a single-cell RNA-seq dataset contains 2,761 CD8 T cells from 18 melanoma samples derived from baseline (pre-treatment). This notebook is intended to illustrate a new algorithm for high-dimensional cell projection and its application in prediction of response to ICB. These patient samples were derived from baseline (pre-ICB). These patients received anti-PD-1, or anti-CTLA-4, or anti-PD-1/anti-CTLA-4.\n",
+    "Here, we use the dataset of GSE123813 [https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE123813] as an example. This notebook is intended to illustrate a new algorithm for high-dimensional cell projection and its application in prediction of response to ICB. These patient samples were derived from baseline (pre-ICB). These patients received anti-PD-1, or anti-CTLA-4, or anti-PD-1/anti-CTLA-4.\n",
     "\n"
    ]
   },
@@ -838,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
